--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^8.4.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "sass-loader": "^8.0.2",
+    "node-sass": "^4.12.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
